# ChangeLog for Portage; the Gentoo Linux ports system 
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Id$

  MAJOR CHANGES in 2.0.51:
    1. /var/cache/edb/virtuals is no longer used at all. It's calculated now.
    2. /var/cache/edb/world is now /var/lib/portage/world.
    3. /etc/portage/profile/virtuals is _USER_ configs only.

  29 May 2005; Mike Frysinger <vapier@gentoo.org> bin/prepall:
  Add a QA check to see if PORTAGE_TMPDIR leaked into libtool scripts (*.la).

  24 May 2005; Mike Frysinger <vapier@gentoo.org>
  bin/ebuild-default-functions.sh:
  Allow src_install() to abort if scanelf locates questionable binaries and 
  user has 'stricter' in their FEATURES.

  23 May 2005; Mike Frysinger <vapier@gentoo.org> 
  bin/ebuild-default-functions.sh:
  Make sure the files passed to unpack actually exist.

  20 May 2005; Mike Frysinger <vapier@gentoo.org> bin/prepstrip
  bin/ebuild-default-functions.sh:
  Removed calls to readelf and replaced with scanelf.  Added more QA checks 
  for various issues related to ELF binaries.

  11 May 2005; Jason Stubbs <jstubbs@gentoo.org> pym/portage_syntax.py:
  Redesigned and rewrote DependSpec.

  06 May 2005; Brian Harring <ferringb@gentoo.org> pym/config.py: Dsd supplied 
  a tweak to the quote escaping; should solve the issues transferring from 
  python side to bash.

  05 May 2005; Jason Stubbs <jstubbs@gentoo.org> bin/test_target_graph.py
  pym/portage_dep.py: Added some basic utility methods to StateGraph. Reworked
  the test script into a functional equivalent of --pretend depclean.

  05 May 2005; Jason Stubbs <jstubbs@gentoo.org> pym/portage_syntax.py: Added
  with_key() method to Atom for creating a new atom of a different key with
  the same constraints.

  05 May 2005; Jason Stubbs <jstubbs@gentoo.org> bin/test_target_graph.py
  pym/portage_dep.py: Added transform_virtuals() function to just that. Added
  testing code to show how it is used. Renamed TargetGraph to StateGraph.
